fixed spacing, and background

--- a/src/News.css
+++ b/src/News.css
@@ -1,6 +1,7 @@
 body{
     background-color: white;
     background-image: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .reuters {
